# rust-app

./: .gitignore
actix-web/ezytutors/tutor-db/: .env  Cargo.toml
actix-web/ezytutors/tutor-db/migrations/: 20241011115717_ezy_course_c4.sql
actix-web/ezytutors/tutor-db/src/iter2/: handlers.rs  models.rs
actix-web/ezytutors/tutor-nodb/: Cargo.toml
actix-web/ezytutors/tutor-nodb/src/: handlers.rs  main.rs  models.rs  routes.rs
actix-web/http-test/: request.http
modern-web/http/src/: httprequest.rs  httpresponse.rs
modern-web/httpserver/: Cargo.toml
modern-web/httpserver/data/: orders.json
modern-web/httpserver/public/: 404.html  health.html  index.html
modern-web/httpserver/src/: handler.rs  main.rs  router.rs  server.rs
